tests/baselines/reference/ES5For-ofTypeCheck9(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
ES5For-ofTypeCheck9.ts(2,15): error TS2461: Type 'number | symbol | string[]' is not an array type.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== ES5For-ofTypeCheck9.ts (1 errors) ====
    declare var union: string | string[] | number | symbol;
    for (let v of union) { }
                  ~~~~~
!!! error TS2461: Type 'number | symbol | string[]' is not an array type.